--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,119 @@
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #eee;
-    color: #424242;
-    font-size: 1.5rem;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #eee;
+  color: #424242;
+  font-size: 1.5rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+h1 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .container {
-    margin: auto;
-    margin-top: 4rem;
-    max-width: 500px;
-    background-color: #fff;
-    padding: 2rem;
-    border-radius: 0.5rem;
-    box-shadow: 0 2px 12px rgba(200, 200, 200, 0.2)
+  margin: auto;
+  margin-top: 4rem;
+  max-width: 500px;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 12px rgba(200, 200, 200, 0.2);
 }
 
 .input-container {
-    display: flex;
-    flex-direction: row;
-    column-gap: 0.5rem;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  column-gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
 }
 
 #text-input {
-    font-size: 1.5rem;
-    height: 3rem;
-    padding: 0.5rem 1rem;
-    border: 1px solid lightgray;
-    border-radius: 0.3rem;
-    color: #5f5f5f;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1.5rem;
+  height: 3rem;
+  padding: 0.5rem 1rem;
+  border: 1px solid lightgray;
+  border-radius: 0.3rem;
+  color: #5f5f5f;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 #text-input:focus {
-    outline: none;
-    border: 1px solid #845edb;
+  outline: none;
+  border: 1px solid #845edb;
 }
 
 #check-btn {
-    font-size: 1.5rem;
-    height: 3rem;
-    padding: 0.5rem 1rem;
-    border: 1px solid #845edb;
-    border-radius: 0.3rem;
-    background-color: #845edb;
-    color: #fff;
-    cursor: pointer;
+  font-size: 1.5rem;
+  height: 3rem;
+  padding: 0.5rem 1rem;
+  border: 1px solid #845edb;
+  border-radius: 0.3rem;
+  background-color: #845edb;
+  color: #fff;
+  cursor: pointer;
 }
 
 #result {
-    margin-top: 1rem;
-}   
+  margin-top: 1rem;
+}
 
 .red {
-    color: rgb(224, 70, 70);
+  color: rgb(224, 70, 70);
 }
 
 .green {
-    color: rgb(62, 185, 62);
+  color: rgb(62, 185, 62);
+}
+
+.note {
+  font-size: 1.2rem;
+  text-align: justify;
+  margin: auto;
+  margin-top: 2rem;
+  max-width: 500px;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 12px rgba(200, 200, 200, 0.2);
+}
+
+.note li {
+  margin-left: 2rem;
+}
+
+.note span {
+  font-weight: bold;
 }
 
 @media (max-width: 690px) {
-    
-    body {
-        background-color: #fff;
-    }
+  body {
+    background-color: #fff;
+  }
 
-    .container {
-        box-shadow: none;
-    }
+  .container {
+    box-shadow: none;
+  }
 
-    .input-container {
-        row-gap: 0.5rem;
-        flex-direction: column;
-        
-    }
+  .input-container {
+    row-gap: 0.5rem;
+    flex-direction: column;
+  }
 
-    #text-input {
-        width: 100%;
-    }
+  #text-input {
+    width: 100%;
+  }
 
-    #check-btn {
-        width: 100%;
-    }
+  #check-btn {
+    width: 100%;
+  }
 }
